[gd_scene load_steps=8 format=3 uid="uid://7h31cq5cyxdx"]

[ext_resource type="Script" path="res://enemies/enemy_standard_bullet.gd" id="1_0nnlm"]
[ext_resource type="Texture2D" uid="uid://wr03gkixpsw8" path="res://enemies/enemy_standard_bullet.png" id="2_jpcd6"]
[ext_resource type="Script" path="res://velocity_component.gd" id="3_rgex5"]
[ext_resource type="PackedScene" uid="uid://cmplaadmyeejn" path="res://damager_component.tscn" id="4_1tpg2"]
[ext_resource type="Script" path="res://damage.gd" id="5_6axqj"]

[sub_resource type="Resource" id="Resource_y6bln"]
script = ExtResource("5_6axqj")
amount = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g40w3"]
radius = 0.165859
height = 0.621559

[node name="enemy_standard_bullet" type="Node3D"]
script = ExtResource("1_0nnlm")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, 0, 0)
texture = ExtResource("2_jpcd6")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-0.449251, -0.79896, -1, 0.898502, 1.59792, 2)

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("3_rgex5")
direction = Vector2(0, 1)
speed = 20.0

[node name="damager_component" parent="." instance=ExtResource("4_1tpg2")]
damage = SubResource("Resource_y6bln")

[node name="CollisionShape3D" type="CollisionShape3D" parent="damager_component"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0610464, 0)
shape = SubResource("CapsuleShape3D_g40w3")

[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="velocity_changed" from="VelocityComponent" to="." method="_on_velocity_changed"]
[connection signal="damage_dealt" from="damager_component" to="." method="_on_damager_component_damage_dealt"]
